...
    
    static func stopActivityIndicatory() {
        myActivityIndicator.stopAnimating()
    }
    
    static func showAlert(msg: String, viewController: UIViewController) {
         let alert = UIAlertController(title: "Alert", message: msg, preferredStyle: UIAlertController.Style.alert)
               alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: nil))
         viewController.present(alert, animated: true, completion: nil)
    }
    
    static func convertImageToBase64(image: UIImage) -> String {
        let imageData = image.pngData()!
...
